--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
     "body-parser": "~1.17.1",
     "bourbon": "^4.3.4",
     "bourbon-neat": "^1.9.0",
