--- a/package.json
+++ b/package.json
@@ -26,6 +26,15 @@
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1"
+    "gulp-sourcemaps": "^2.6.1",
+    "pug-code-gen": "^2.0.0",
+    "pug-lexer": "^3.1.0",
+    "pug-linker": "^3.0.3",
+    "pug-loader": "^2.3.0",
+    "pug-parser": "^4.0.0",
+    "pug-strip-comments": "^1.0.2",
+    "riot-compiler": "^3.4.0",
+    "simple-dom": "^1.3.0",
+    "simple-html-tokenizer": "^0.4.3"
   }
 }
